# untitled-Athenahacks-project

./: .gitignore  CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json  presage_bridge  setup.cpp
backend/: presage_bridge.cpp  requirements.txt  server.py  server.py.save
frontend/: index.html  notenoughtimetointegrate.txt
